export const FRIDGE = "fridge";
export const FREEZER = "freezer";
export const SETTINGS = "settings";
export const ActionTypes = {
  RESTORE_TOKEN: "RESTORE_TOKEN",
  SIGN_IN: "SIGN_IN",
  SIGN_OUT: "SIGN_OUT",
  PROFILE_IMG: "PROFILE_IMG",
};
