...
                />
            </View>
            <TouchableHighlight
                onPress={handleAddPress}
                style={styles.button}
            >
                <Text style={styles.buttonText}>Add</Text>
            </TouchableHighlight>
            <TouchableHighlight
                onPress={handleDeletePress}
                style={[styles.button, styles.buttonDelete]}
            >
                <Text style={styles.buttonText}>Delete</Text>
...
